Change active sheet appearance to avoid questionably visible off by one pixel

--- a/data/styles/app-stylesheet.css
+++ b/data/styles/app-stylesheet.css
@@ -80,6 +80,10 @@ actionbar,
 .thief-search-results *:hover:active {
     background: @colorPrimaryActive;
     color: @textColorActive;
+    border-bottom: 0px solid @textColorPrimary;
+    border-top: 0px solid @textColorPrimary;
+    border-left: 5px solid @selectionColor;
+    border-right: 0px;
 }
 
 filechooser actionbar, filechooser, filechooser stack, placessidebar, window {
